<resources>
    <string name="app_name">Huawei Support</string>
    <string name="title_activity_main2">Support</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_settings_language">Language</string>
    <string name="fragment_settings_cache">Clear news cache</string>
    <string name="fragment_settings_theme">Theme</string>
    <string name="fragment_account_name">Change name</string>
    <string name="fragment_account_pass">Change password</string>
    <string name="fragment_account_phone">Change phone</string>

    <string-array name="spinner_1">

    </string-array>

</resources>
