<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/clickable"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/fragment_settings_language"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/cache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/clickable"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/fragment_settings_cache"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/clickable"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/fragment_settings_theme"
        android:textSize="20sp"/>


</LinearLayout>